Only install Messages PWA when supported and allowed.

Avoid installing the Android Messages PWA if prohibited by policy or if
either the phone or Chromebook does not support it. Also listen for
changes in feature state to install the app if something changes.

Bug: 884290
Change-Id: I527828e68c3578e54a1ce15cace64e4ed2c81745
Reviewed-on: https://chromium-review.googlesource.com/1250209
Commit-Queue: Jeremy Klein <jlklein@chromium.org>
Reviewed-by: Kyle Horimoto <khorimoto@chromium.org>
Cr-Commit-Position: refs/heads/master@{#595466}
Former-commit-id: c2945c982be854b7f0ed315b2b45e05264a072d5